--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -5,7 +5,7 @@ main {
   .h4,
   .h5,
   .title {
-    font-family: $family-default;
+    font-family: $family-neue-haas-unica;
     font-weight: 600; // semi-bold
     color: $color-dark-blue;
 
