--- a/frontend/src/scss/_footer.scss
+++ b/frontend/src/scss/_footer.scss
@@ -21,7 +21,7 @@
       margin: 0;
 
       li {
-        font-family: $family-default;
+        font-family: $family-neue-haas-unica;
         font-size: 1.6rem;
         font-weight: 400; // regular
         color: $color-dark-blue;
