--- a/frontend/src/scss/_swiper.scss
+++ b/frontend/src/scss/_swiper.scss
@@ -39,7 +39,7 @@
   }
 
   .swiper-pagination-bullet-active {
-    background-color: $color-green;
+    background-color: $color-red;
   }
 }
 
@@ -50,7 +50,7 @@
     margin-top: 4rem;
 
     .swiper-scrollbar-drag {
-      background-color: $color-green;
+      background-color: $color-red;
     }
   }
 }
