--- a/frontend/src/scss/pages/contact.scss
+++ b/frontend/src/scss/pages/contact.scss
@@ -3,7 +3,7 @@
 
   #main-section {
     #form-container {
-      background-color: $color-green;
+      background-color: $color-red;
       border-radius: 3rem;
       padding: 3rem;
 
