--- a/frontend/src/scss/pages/sandbox/main-section.scss
+++ b/frontend/src/scss/pages/sandbox/main-section.scss
@@ -24,7 +24,7 @@
 
           .show-hide-button {
             &.active {
-              color: $color-green;
+              color: $color-red;
             }
           }
         }
