--- a/frontend/src/scss/_fonts.scss
+++ b/frontend/src/scss/_fonts.scss
@@ -2,7 +2,7 @@
 @import url("https://use.typekit.net/lmc7zpe.css");
 
 // Definitions
-$family-default: "poppins", sans-serif;
+$family-neue-haas-unica: "neue-haas-unica", sans-serif;
 
 //  Values   /    Names
 //  100 	        UltraThin
@@ -23,3 +23,43 @@ $family-default: "poppins", sans-serif;
 //  800 	        Black
 //  900 	        ExtraBlack
 //  999 	        UltraBlack
+
+// Neue Haas Unica W1G Regular
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 400;
+// font-style: normal;
+
+// Neue Haas Unica W1G Italic
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 400;
+// font-style: italic;
+
+// Neue Haas Unica W1G Medium
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 500;
+// font-style: normal;
+
+// Neue Haas Unica W1G Medium Italic
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 500;
+// font-style: italic;
+
+// Neue Haas Unica W1G Bold
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 600;
+// font-style: normal;
+
+// Neue Haas Unica W1G Bold Italic
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 600;
+// font-style: italic;
+
+// Neue Haas Unica W1G Heavy
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 700;
+// font-style: normal;
+
+// Neue Haas Unica W1G Heavy Italic
+// font-family: "neue-haas-unica", sans-serif;
+// font-weight: 700;
+// font-style: italic;
