--- a/frontend/src/scss/_footer.scss
+++ b/frontend/src/scss/_footer.scss
@@ -1,46 +1,40 @@
 [id="footer"] {
-  background-color: $color-light-blue;
-  color: $color-dark-blue;
-  padding: 4rem 0;
+  &.footer {
+    width: 100%;
+    background-color: $color-dark-blue;
+    color: $color-white;
+    padding: 3rem 0;
 
-  .footer-top {
-    // TODO:
-  }
+    .footer {
+      &__navigation {
+        &-menu {
+          list-style: none;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          padding-left: 0;
+          margin: 0;
 
-  .footer-bottom {
-    ul {
-      @include from("desktop") {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      display: block;
+          &-item {
+            a {
+              text-decoration: none;
+              font-size: 1.4rem;
+              color: $color-white;
 
-      list-style-type: none;
-      padding-left: 0;
-      margin: 0;
+              &:hover,
+              &:focus {
+                color: $color-red;
+              }
 
-      li {
-        font-family: $family-neue-haas-unica;
-        font-size: 1.6rem;
-        font-weight: 400; // regular
-        color: $color-dark-blue;
+              &:active {
+                filter: brightness(0.7);
+              }
+            }
 
-        @include from("desktop") {
-          &:not(:last-child)::after {
-            content: " |";
-            margin-right: 0.5rem;
-          }
-        }
-
-        a {
-          text-decoration: underline;
-          display: inline-block;
-          color: $color-dark-blue;
-
-          &:hover,
-          &:focus {
-            color: $color-white;
+            &:not(:last-child)::after {
+              content: " | ";
+              margin-right: 0.5rem;
+            }
           }
         }
       }
