--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -164,4 +164,5 @@ main {
 
   @import "./pages/home/main.scss";
   @import "./pages/additional-pages.scss";
+  @import "./components/top-games.scss";
 }
