feat: Ajout du modal de recherche de jeux

--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -165,4 +165,5 @@ main {
   @import "./pages/home/main.scss";
   @import "./pages/additional-pages.scss";
   @import "./components/top-games.scss";
+  @import "./components/modal.scss";
 }
