--- a/frontend/src/scss/_header.scss
+++ b/frontend/src/scss/_header.scss
@@ -1,5 +1,6 @@
 [id="header"] {
   &.header {
+    height: 11.5rem;
     width: 100%;
     background-color: $color-dark-blue;
     color: $color-white;
