--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -148,12 +148,9 @@ main {
     }
   }
 
-  form {
-    @import "forms";
-  }
-
   @import "./pages/home/main.scss";
   @import "./pages/games/main.scss";
+  @import "./pages/profile/main.scss";
   @import "./pages/additional-pages.scss";
 
   @import "./components/top-games.scss";
