--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -1,6 +1,8 @@
 label,
 .label {
   display: block;
+  margin-left: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 [type="text"],
@@ -42,49 +44,20 @@ select {
   }
 }
 
-.grid-field-container {
-  @include from("desktop") {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
-  }
-  display: block;
-
-  margin-top: 2rem;
-
-  .field {
-    @include from("desktop") {
-      margin: 0;
-    }
-    margin: 2rem 0;
-  }
-}
-
-.field {
-  margin-top: 2rem;
-}
-
-.flex-rgpd-container {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 3rem;
-
-  input[type="checkbox"] {
-    flex-shrink: 0;
-  }
-}
-
 [type="submit"] {
   @extend .btn;
-
-  // Création d'espace pour reCAPTCHA
-  margin-bottom: 2rem;
+  border: solid 0.1rem $color-white;
+  font-size: inherit;
 
   &:hover,
   &:focus {
-    background-color: $color-light-blue;
+    background-color: $color-white;
     color: $color-dark-blue;
+    border: solid 0.1rem $color-dark-blue;
+  }
+
+  &:active {
+    filter: brightness(75%);
   }
 
   &:disabled {
@@ -97,5 +70,27 @@ select {
       background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
       color: rgba($color: $color-white, $alpha: 0.5);
     }
+  }
+}
+
+.field {
+  margin-top: 2rem;
+}
+
+.field-container {
+  @include from("desktop") {
+    display: flex;
+    gap: 2rem;
+  }
+  display: block;
+
+  .field {
+    @include from("desktop") {
+      margin: 0;
+    }
+
+    width: 100%;
+    margin: 2rem 0;
+    @extend .no-margin-outside;
   }
 }
