--- a/frontend/src/scss/pages/profile/login.scss
+++ b/frontend/src/scss/pages/profile/login.scss
@@ -14,10 +14,7 @@
       }
 
       &__title {
-        @include from("desktop") {
-          margin-bottom: 4rem;
-        }
-        margin-bottom: 3rem;
+        margin: 0;
 
         margin-top: 0;
       }
@@ -37,10 +34,6 @@
 
       &__form {
         margin-top: 3rem;
-
-        &:first-of-type {
-          margin-top: 0;
-        }
       }
 
       &__label {
