--- a/frontend/src/scss/components/filters.scss
+++ b/frontend/src/scss/components/filters.scss
@@ -1,16 +1,22 @@
 .filters {
+  @include from("desktop") {
+    display: block;
+  }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+
   &__group {
-    margin-bottom: 1.6rem;
+    @include from("desktop") {
+      margin-bottom: 1.6rem;
+    }
   }
 
   &__label {
     font-weight: bold;
-    display: block;
-    margin-bottom: 0.5rem;
   }
 
   &__select {
-    width: 100%;
     padding: 0.5rem;
     border: 0.1rem solid rgba($color: $color-dark-blue, $alpha: 0.5);
     border-radius: 0.5rem;
