--- a/frontend/src/scss/pages/games/all-games.scss
+++ b/frontend/src/scss/pages/games/all-games.scss
@@ -45,17 +45,25 @@
       }
       margin-bottom: 2rem;
 
-      cursor: default;
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 20rem;
+      border: solid 0.5rem $color-white;
       border-radius: 1.6rem;
       box-shadow: 0 0.4rem 0.8rem rgba($color: $color-dark-blue, $alpha: 0.16);
       padding: 2rem;
+      transition-duration: 0.4s;
 
       background-size: cover;
       background-repeat: no-repeat;
+
+      &:hover,
+      &:focus {
+        border: solid 0.5rem $color-red;
+        transform: scale(1.03);
+      }
 
       &__container {
         @include from("tablet") {
@@ -81,7 +89,8 @@
       }
 
       &__name {
-        font-size: 2rem;
+        font-size: 1.8rem;
+        margin-top: 0;
       }
 
       &__list {
