fix: Accès au .env pour le front

--- a/frontend/src/scss/components/top-games.scss
+++ b/frontend/src/scss/components/top-games.scss
@@ -47,7 +47,7 @@
       justify-content: center;
       align-items: center;
       height: 20rem;
-      border: solid 0.5rem $color-white;
+      border: solid 0.5rem $color-dark-blue;
       border-radius: 1.6rem;
       box-shadow: 0 0.4rem 0.8rem rgba($color: $color-dark-blue, $alpha: 0.16);
       padding: 3rem;
