--- a/frontend/src/scss/pages/games/game-details.scss
+++ b/frontend/src/scss/pages/games/game-details.scss
@@ -15,19 +15,25 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-          gap: 12rem;
+          gap: 6rem;
         }
         display: block;
       }
 
       &__col {
         &--left {
-          flex-shrink: 0;
-          width: 40%;
+          @include from("desktop") {
+            flex-shrink: 0;
+            width: 40%;
+          }
+          width: 100%;
         }
 
         &--right {
-          flex-grow: 1;
+          @include from("desktop") {
+            flex-grow: 1;
+            width: 100%;
+          }
 
           img {
             border-radius: 2rem;
@@ -57,6 +63,12 @@
         text-align: center;
         display: grid;
         gap: 1.6rem;
+
+        &--overview {
+          @include from("desktop") {
+            grid-template-columns: repeat(1, 1fr);
+          }
+        }
       }
 
       &__item {
@@ -72,6 +84,24 @@
         @extend .btn;
         margin-top: 2rem;
         padding: 0.5rem 2rem;
+      }
+
+      &__button {
+        @extend .btn;
+        width: 100%;
+        border-radius: 1.5rem;
+
+        &.disabled {
+          cursor: not-allowed;
+          background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+          color: rgba($color: $color-white, $alpha: 0.5);
+
+          &:hover,
+          &:focus {
+            background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+            color: rgba($color: $color-white, $alpha: 0.5);
+          }
+        }
       }
     }
 
