--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -14,7 +14,8 @@ label,
 [type="url"],
 [type="date"],
 textarea,
-select {
+select,
+.custom-input {
   display: block;
   width: 100%;
   background-color: transparent;
