--- a/frontend/src/scss/components/modal.scss
+++ b/frontend/src/scss/components/modal.scss
@@ -87,12 +87,25 @@
     text-align: center;
     border: solid 0.1rem $color-dark-blue;
     border-radius: 1rem;
+    overflow: hidden;
     transition-duration: 0.4s;
 
     &:hover,
     &:focus {
       background-color: $color-dark-blue;
       color: $color-white;
+    }
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      transition-duration: 0.4s;
+
+      &:hover,
+      &:focus {
+        transform: scale(1.15);
+      }
     }
   }
 
@@ -130,5 +143,26 @@
   }
 
   &__textarea {
+  }
+
+  &__add {
+    @extend .btn;
+
+    padding: 0.5rem 1.5rem;
+    margin-top: 1.5rem;
+
+    &:disabled {
+      cursor: not-allowed;
+      background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+      color: rgba($color: $color-white, $alpha: 0.5);
+      border-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+
+      &:hover,
+      &:focus {
+        background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+        color: rgba($color: $color-white, $alpha: 0.5);
+        border-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+      }
+    }
   }
 }
