--- a/frontend/src/scss/pages/games/game-details.scss
+++ b/frontend/src/scss/pages/games/game-details.scss
@@ -38,6 +38,8 @@
           }
 
           img {
+            width: 100%;
+            object-fit: cover;
             border-radius: 2rem;
           }
         }
