style: Compilation CSS

--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -177,7 +177,7 @@ main {
   }
 
   &#home {
-    @import "./landing-page.scss";
+    @import "./pages/landing-page.scss";
   }
 
   &#additional-pages {
