feat: Ajout de la page de contact et de TAC

--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -180,6 +180,10 @@ main {
     @import "./pages/landing-page.scss";
   }
 
+  &#contact {
+    @import "./pages/contact.scss";
+  }
+
   &#additional-pages {
     font-size: 2rem;
     padding: 8rem 0;
