refactor: Gestions des isLoading/IsError refait

--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -47,7 +47,7 @@ select,
 
 [type="submit"] {
   @extend .btn;
-  background-color: $color-light-blue;
+  background-color: $color-white;
   color: $color-dark-blue;
   font-size: inherit;
   margin-bottom: 2rem;
