--- a/frontend/src/scss/components/modal.scss
+++ b/frontend/src/scss/components/modal.scss
@@ -12,13 +12,13 @@
 
   &__content {
     @include from("desktop") {
+      width: 50%;
+
       padding: 3rem 6rem;
     }
     padding: 1.5rem 2rem;
 
     position: relative;
-    height: 90%;
-    width: 90%;
     background-color: $color-white;
     border-radius: 1rem;
     overflow-y: auto;
@@ -34,6 +34,7 @@
   }
 
   &__title {
+    width: 90%;
     margin-top: 0;
   }
 
@@ -131,17 +132,27 @@
   &__field {
     @extend .field;
 
+    &--flex {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
     &-container {
       @extend .field-container;
     }
   }
 
   &__submit {
+    background-color: $color-dark-blue;
+    color: $color-white;
+    border: solid 0.1rem $color-dark-blue;
     margin-top: 3rem;
   }
 
   &__delete {
     @extend .btn;
+
     display: block;
     background-color: $color-red;
     border: solid 0.1rem $color-white;
@@ -158,6 +169,10 @@
   }
 
   &__textarea {
+  }
+
+  &__description {
+    margin: 0;
   }
 
   &__add {
@@ -177,6 +192,42 @@
         background-color: rgba($color: $color-dark-blue, $alpha: 0.5);
         color: rgba($color: $color-white, $alpha: 0.5);
         border-color: rgba($color: $color-dark-blue, $alpha: 0.5);
+      }
+    }
+  }
+
+  &__radio {
+    display: flex;
+    gap: 1.6rem;
+
+    input[type="radio"] {
+      display: none;
+    }
+
+    input[type="radio"]:checked + label {
+      background-color: $color-dark-blue;
+      color: $color-white;
+    }
+
+    input + label {
+      background-color: transparent;
+      color: $color-dark-blue;
+
+      outline: none;
+      border: solid 0.1rem $color-dark-blue;
+      border-radius: 2.5rem;
+      transition-duration: 0.4s;
+      padding: 1rem;
+      margin: 0;
+
+      &:hover,
+      &:focus {
+        background-color: $color-dark-blue;
+        color: $color-white;
+
+        &::placeholder {
+          color: $color-dark-blue;
+        }
       }
     }
   }
